добавил проверку категории, изменил доку
